// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component corectly when has children 1`] = `
.c0 {
  margin-top: -6em;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: 0.625rem;
  margin: 0 auto;
  text-indent: -9999em;
  width: 6em;
  height: 6em;
  border-color: white;
  border-radius: 50%;
  background: #003FF2;
  background: -moz-linear-gradient( left, #003FF2 10%, white 42% );
  background: -webkit-linear-gradient( left, #003FF2 10%, white 42% );
  background: -o-linear-gradient( left, #003FF2 10%, white 42% );
  background: -ms-linear-gradient( left, #003FF2 10%, white 42% );
  background: linear-gradient( to right, #003FF2 10%, white 42% );
  position: relative;
  -webkit-animation: load3 1.4s infinite linear;
  -webkit-animation: load3 1.4s infinite linear;
  animation: load3 1.4s infinite linear;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c1:before {
  width: 50%;
  height: 50%;
  background: #003FF2;
  border-radius: 100% 0 0 0;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
}

.c1:after {
  background: #FFFFFF;
  width: 75%;
  height: 75%;
  border-radius: 50%;
  content: '';
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
  data-testid="Loader"
>
  <div
    class="c1"
  />
  <p>
    message
  </p>
</div>
`;

exports[`should render the component correctly 1`] = `
.c0 {
  margin-top: -6em;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: 0.625rem;
  margin: 0 auto;
  text-indent: -9999em;
  width: 6em;
  height: 6em;
  border-color: white;
  border-radius: 50%;
  background: #003FF2;
  background: -moz-linear-gradient( left, #003FF2 10%, white 42% );
  background: -webkit-linear-gradient( left, #003FF2 10%, white 42% );
  background: -o-linear-gradient( left, #003FF2 10%, white 42% );
  background: -ms-linear-gradient( left, #003FF2 10%, white 42% );
  background: linear-gradient( to right, #003FF2 10%, white 42% );
  position: relative;
  -webkit-animation: load3 1.4s infinite linear;
  -webkit-animation: load3 1.4s infinite linear;
  animation: load3 1.4s infinite linear;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

.c1:before {
  width: 50%;
  height: 50%;
  background: #003FF2;
  border-radius: 100% 0 0 0;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
}

.c1:after {
  background: #FFFFFF;
  width: 75%;
  height: 75%;
  border-radius: 50%;
  content: '';
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  class="c0"
  data-testid="Loader"
>
  <div
    class="c1"
  />
</div>
`;
